Add a new post about 2016

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -10,6 +10,7 @@
     @import "atoms/grid";
     @import "atoms/font-awesome";
     @import "atoms/typography";
+    @import "atoms/table";
 
 /*  Molecules
     ========================================================================== */
