--- a/assets/scss/organisms/layout.scss
+++ b/assets/scss/organisms/layout.scss
@@ -201,7 +201,8 @@
 
             .post-content p,
             .post-content ul,
-            .post-content ol {
+            .post-content ol,
+            .post-content table {
                 font-size: 18px;
                 line-height: 28px;
                 text-align: justify;
