--- a/assets/scss/organisms/variations.scss
+++ b/assets/scss/organisms/variations.scss
@@ -44,6 +44,15 @@
 
     [data-color="gray"] .post:hover { background-color: darken(#333, 3%); }
 
+    [data-color="gray"] table {
+        background-color: darken(#333, 3%);
+
+        td,
+        th {
+            border-color: darken($orange, 10%);
+        }        
+    }
+
 /*  Purple
     ========================================================================== */
     [data-color="purple"] { background-color: $purple; }
@@ -82,6 +91,15 @@
     }
 
     [data-color="purple"] .post:hover { background-color: darken($purple, 3%); }
+
+    [data-color="purple"] table {
+        background-color: darken($purple, 3%);
+
+        td,
+        th {
+            border-color: lighten($purple, 40%);
+        }        
+    }
 
 /*  Brown
     ========================================================================== */
@@ -122,6 +140,15 @@
 
     [data-color="brown"] .post:hover { background-color: darken($brown, 3%); }
 
+    [data-color="brown"] table {
+        background-color: darken($brown, 3%);
+
+        td,
+        th {
+            border-color: lighten($brown, 40%);
+        }        
+    }
+
 /*  Blue
     ========================================================================== */
     [data-color="blue"] { background-color: darken($blue, 35%); }
@@ -160,3 +187,12 @@
     }
 
     [data-color="blue"] .post:hover { background-color: darken($blue, 38%); }
+
+    [data-color="blue"] table {
+        background-color: darken($blue, 38%);
+
+        td,
+        th {
+            border-color: $blue;
+        }        
+    }
