--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,8 +12,8 @@
     <nav class="nav-main">
         <ul class="main-menu">
             <li>
-                <a class="nav-link" href="{{ site.baseurl }}blog"><i class="fa fa-pencil"></i> Blog</a>
-                <ul class="sub-menu">
+                <a class="nav-link" href="{{ site.baseurl }}en/blog"><i class="fa fa-pencil"></i> Blog</a>
+                <!-- <ul class="sub-menu">
                     <li
                         {% if page.type  == 'Archive' and page.language == 'pt-br' %} class="active"{% endif %}
                         {% if page.type  == 'Post' and page.lang == 'pt-br' %} class="active"{% endif %}
@@ -27,7 +27,7 @@
                     > 
                         <a href="{{ site.baseurl }}en/blog">English</a>
                     </li>
-                </ul>
+                </ul> -->
             </li>
             <li>
                 <a class="nav-link" href="{{ site.baseurl }}projects"><i class="fa fa-coffee"></i> Projects</a>
