--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,12 +29,12 @@ layout: default
 {% include share.html %}
 
 {% if page.lang == undefined or page.lang == "pt-br" %}
-  <a href="{{ site.baseurl }}blog">
+  <a href="/blog">
     <i class="fa fa-angle-double-left"></i>Ver todos os posts
   </a>
 {% endif %}
 {% if page.lang == "en" %}
-  <a href="{{ site.baseurl }}en/blog">
+  <a href="/en/blog">
     <i class="fa fa-angle-double-left"></i>See all the posts
   </a>
 {% endif %}
