Starts the homepage

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,43 +1,11 @@
-<a href="#conteudo" class="sr-only go-content" tabindex="1" accesskey="1">Ir para conteúdo</a>
-<header class="header {% if page.type == 'Home' %}header-home{% endif %}" role="banner">
-    <figure class="thumb">
-        <a href="/"><img src="/build/img/raphael-fabeni.jpg" alt="Raphael Fabeni visto de frente sorrindo para a foto"></a>
-    </figure>
-    <h1 class="title"><a class="hover" href="/">Raphael Fabeni</a></h1>
-    <h2 class="subtitle">Front-end developer</h2>
-    {% if page.type != 'Home' %}
-    {% include social.html %}
-    {% endif %}
+<!-- <a href="#conteudo" class="sr-only go-content" tabindex="1" accesskey="1">Ir para conteúdo</a> -->
+<header class="header container container--full" role="banner">
+	<figure class="header__thumb">
+		<a href="/">
+			<img src="dist/images/raphael-fabeni.jpg" alt="Picture of Raphael Fabeni">
+		</a>
+	</figure>
 
-    <nav class="nav-main">
-        <ul class="main-menu">
-            <li>
-                <a class="nav-link" href="/en/blog"><i class="fa fa-pencil"></i> Blog</a>
-                <!-- <ul class="sub-menu">
-                    <li
-                        {% if page.type  == 'Archive' and page.language == 'pt-br' %} class="active"{% endif %}
-                        {% if page.type  == 'Post' and page.lang == 'pt-br' %} class="active"{% endif %}
-                        {% if page.type  == 'Post' and page.lang == undefined %} class="active"{% endif %}
-                    >
-                        <a href="/blog">Portuguese</a>
-                    </li>
-                    <li
-                        {% if page.type == 'Archive' and page.language == 'en' %} class="active"{% endif %}
-                        {% if page.type == 'Post' and page.lang == 'en' %} class="active"{% endif %}
-                    >
-                        <a href="/en/blog">English</a>
-                    </li>
-                </ul> -->
-            </li>
-            <li>
-                <a class="nav-link" href="/projects"><i class="fa fa-coffee"></i> Projects</a>
-            </li>
-        </ul>
-    </nav>
-
-    {% if page.language == "pt-br" %}
-        <button id="color" class="btn btn-color" data-link="Color">Não curti essa cor.</button>
-    {% else %}
-        <button id="color" class="btn btn-color" data-link="Color">I don't like this color.</button>
-    {% endif %}
+	<h1 class="title"><a class="hover" href="/">Raphael Fabeni</a></h1>
+	<h2 class="subtitle">Front-end developer</h2>
 </header>
