--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
   {% if page.type != 'Home' %}
     {% include breadcrumbs.html %}
   {% endif %}
-  <main role="main" id="content">
+  <main role="main" id="content" class="container container--full">
     {{ content }}
   </main>
 </body>
