--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,1 +1,9 @@
 @import 'config/general'
+@import 'config/variables'
+
+@import 'components/typography'
+
+@import 'shared/grid'
+@import 'shared/header'
+
+@import 'layout/index'
