--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,6 +45,8 @@
     <!-- CSS -->
     <link rel="stylesheet" href="dist/styles/main.min.css">
 
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600" rel="stylesheet">
+
     <script type="text/javascript">
     (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
     function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
