Starts the header coding :)

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,14 @@
 <!-- <a href="#conteudo" class="sr-only go-content" tabindex="1" accesskey="1">Ir para conteúdo</a> -->
 <header class="header container container--full" role="banner">
-	<figure class="header__thumb">
-		<a href="/">
-			<img src="dist/images/raphael-fabeni.jpg" alt="Picture of Raphael Fabeni">
-		</a>
-	</figure>
-
-	<h1 class="title"><a class="hover" href="/">Raphael Fabeni</a></h1>
-	<h2 class="subtitle">Front-end developer</h2>
+	<div class="header__info">
+		<figure class="header__thumb">
+			<a href="/">
+				<img src="dist/images/raphael-fabeni.jpg" alt="Picture of Raphael Fabeni">
+			</a>
+		</figure>
+		<div>
+			<h1 class="header__title"><a href="/">Raphael Fabeni</a></h1>
+			<h2 class="header__subtitle">Front-end developer</h2>
+		</div>
+	</div>
 </header>
