--- a/src/styles/config/_variables.sass
+++ b/src/styles/config/_variables.sass
@@ -1,6 +1,9 @@
 /*----------  Gradients  ----------*/
-$gradient-dark-color-1: #434343
-$gradient-dark-color-2: #000
+$gradient-dark--color-1: #434343
+$gradient-dark--color-2: #000
+
+$gradient-blue--color-1: #136a8a
+$gradient-blue--color-2: #267871
 
 /*----------  Fonts  ----------*/
 $font-family--default: 'Raleway', Helvetica, Arial, sans-serif
@@ -8,3 +11,8 @@ $font-weight--light: 300
 
 $color-typography: #fff
 $color-links: #f39c12
+
+/*----------  Z-index  ----------*/
+$z-index--main: 3
+$z-index--cover: 2
+$z-index--gradient: 1
