--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -2,8 +2,10 @@
 @import 'config/variables'
 
 @import 'components/typography'
+@import 'components/arrow-link'
 
 @import 'shared/grid'
+@import 'shared/gradients'
 @import 'shared/header'
 
 @import 'layout/index'
