--- a/src/styles/shared/_grid.sass
+++ b/src/styles/shared/_grid.sass
@@ -6,8 +6,15 @@
 	width: 100%
 	max-width: 1200px
 	margin: 0 auto
-	padding-left: 15px
-	padding-right: 15px
+	padding-left: 60px
+	padding-right: 60px
 
 	&--full
 		max-width: 100%
+
+/*----------  Flex for center elements  ----------*/
+.is-center
+	display: flex
+	flex-direction: column
+	align-items: center
+	justify-content: center
