--- a/src/styles/config/_variables.sass
+++ b/src/styles/config/_variables.sass
@@ -13,6 +13,7 @@ $color-typography: #fff
 $color-links: #f39c12
 
 /*----------  Z-index  ----------*/
+$z-index--arrow: 4
 $z-index--main: 3
 $z-index--cover: 2
 $z-index--gradient: 1
