--- a/src/styles/shared/_gradients.sass
+++ b/src/styles/shared/_gradients.sass
@@ -23,6 +23,6 @@
 			background: linear-gradient(-45deg, $gradient-blue--color-1 0%, $gradient-blue--color-2 100%)
 
 /*----------  Main  ----------*/
-body > *:not(.gradient):not(.cover)
+body > *:not(.gradient):not(.cover):not(.arrow)
 	z-index: $z-index--main
 	position: relative
