--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,6 @@
   	{% endif %}
   {% endif %}
 
-  <script src="dist/scripts/main.min.js"></script>
+  <script src="dist/scripts/home.min.js"></script>
 </body>
 </html>
