Fix the script js

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   {% endif %}
 
   {% include head.html %}
-<body class="has-cover is-center">
+<body class="has-cover is-center" data-hold>
 
 	<div data-wrap-gradient class="gradient">
 		<div data-gradient class="gradient__item gradient__item--blue"></div>
@@ -14,7 +14,9 @@
 
 	<div data-cover class="cover"></div>
 
-	<button data-colors>I want more colors!</button>
+	<button data-button-colors>Colors</button>
+	<button data-button-dark>Light</button>
+	<button data-button-light>Dark</button>
 
   {% include header.html %}
 
