General adjustments for package

--- a/src/styles/layout/_index.sass
+++ b/src/styles/layout/_index.sass
@@ -20,6 +20,7 @@ body
 	filter: grayscale(100%)
 	transition: filter 1s ease
 	will-change: filter
+	opacity: 0
 
 	&.has-color
 		filter: grayscale(0)
