Starts the theme dev

--- a/src/styles/config/_variables.sass
+++ b/src/styles/config/_variables.sass
@@ -12,6 +12,9 @@ $font-weight--light: 300
 $color-typography: #fff
 $color-links: #f39c12
 
+/*----------  Themes  ----------*/
+
+
 /*----------  Z-index  ----------*/
 $z-index--arrow: 4
 $z-index--main: 3
