Adds the actions buttons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,15 +8,11 @@
   {% include head.html %}
 <body class="has-cover is-center" data-hold>
 
-	<div data-wrap-gradient class="gradient">
-		<div data-gradient class="gradient__item gradient__item--blue"></div>
+	<div data-wrap-theme class="theme">
+		<div data-theme class="theme__item theme__item--light"></div>
 	</div>
 
 	<div data-cover class="cover"></div>
-
-	<button data-button-colors>Colors</button>
-	<button data-button-dark>Light</button>
-	<button data-button-light>Dark</button>
 
   {% include header.html %}
 
