--- a/src/styles/components/_typography.sass
+++ b/src/styles/components/_typography.sass
@@ -14,7 +14,7 @@ p
 /*----------  Links  ----------*/
 a:not(.arrow)
 	color: $color-links
-	transition: opacity .3s ease
+	transition: opacity .3s ease, color .3s ease
 
 	&:hover,
 	&:focus
