--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -3,9 +3,10 @@
 
 @import 'components/typography'
 @import 'components/arrow-link'
+@import 'components/buttons'
 
 @import 'shared/grid'
-@import 'shared/gradients'
+@import 'shared/hold-themes'
 @import 'shared/header'
 
 @import 'layout/index'
