--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,11 @@
 <!-- <a href="#conteudo" class="sr-only go-content" tabindex="1" accesskey="1">Ir para conteúdo</a> -->
 <header class="header container container--full" role="banner">
+	<div class='actions'>
+		<div class="actions__button" role="button" data-button data-button-colors>&#10036;</div>
+		<div class="actions__button" role="button" data-button data-button-dark>&#9790;</div>
+		<div class="actions__button" role="button" data-button data-button-light>&#x263C;</div>
+  </div>
+
 	<div class="header__info">
 		{% if page.type != 'Home' %}
 		<figure class="header__thumb">
