--- a/src/styles/config/_variables.sass
+++ b/src/styles/config/_variables.sass
@@ -1,3 +1,5 @@
+$color-orange: #f39c12
+$color-blue: #4183d7
 /*----------  Gradients  ----------*/
 $gradient-dark--color-1: #434343
 $gradient-dark--color-2: #000
@@ -10,10 +12,9 @@ $font-family--default: 'Raleway', Helvetica, Arial, sans-serif
 $font-weight--light: 300
 
 $color-typography: #fff
-$color-links: #f39c12
+$color-links: $color-orange
 
 /*----------  Themes  ----------*/
-
 
 /*----------  Z-index  ----------*/
 $z-index--arrow: 4
