Starts the blog page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,7 +43,7 @@
     <link href='http://raphaelfabeni.com.br/feed.xml' rel='alternate' type='application/atom+xml'>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="dist/styles/main.min.css">
+    <link rel="stylesheet" href="/dist/styles/main.min.css">
 
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600" rel="stylesheet">
 
