--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <!-- <a href="#conteudo" class="sr-only go-content" tabindex="1" accesskey="1">Ir para conteúdo</a> -->
 <header class="header container container--full" role="banner">
 	<div class='actions'>
-		<div class="actions__button" role="button" data-button data-button-colors>&#10036;</div>
+		<!-- <div class="actions__button" role="button" data-button data-button-colors>&#10036;</div> -->
 		<div class="actions__button" role="button" data-button data-button-dark>&#9790;</div>
 		<div class="actions__button" role="button" data-button data-button-light>&#x263C;</div>
   </div>
@@ -10,7 +10,7 @@
 		{% if page.type != 'Home' %}
 		<figure class="header__thumb">
 			<a href="/">
-				<img src="dist/images/raphael-fabeni.jpg" alt="Picture of Raphael Fabeni">
+				<img src="/dist/images/raphael-fabeni.jpg" alt="Picture of Raphael Fabeni">
 			</a>
 		</figure>
 		{% endif %}
