--- a/src/styles/components/_typography.sass
+++ b/src/styles/components/_typography.sass
@@ -12,7 +12,7 @@ p
 	line-height: 1.4
 
 /*----------  Links  ----------*/
-a:not(.arrow)
+a:not(.arrow):not(.button)
 	color: $color-links
 	transition: opacity .3s ease, color .3s ease
 
