--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,8 +1,10 @@
+@import 'config/mixins'
 @import 'config/general'
 @import 'config/variables'
 
 @import 'components/typography'
 @import 'components/arrow-link'
+@import 'components/actions-buttons'
 @import 'components/buttons'
 
 @import 'shared/grid'
