--- a/src/styles/components/_buttons.sass
+++ b/src/styles/components/_buttons.sass
@@ -1,77 +1,41 @@
-.actions
-	position: fixed
-	right: 10px
-	top: 10px
-	display: flex
-	justify-content: center
+.button
+	color: #fff
+	display: inline-block
+	padding: 5px 18px
+	text-decoration: none
+	transition: opacity .3s ease, transform .3s cubic-bezier(0.175, 0.885, 0.320, 1.275), box-shadow .3s cubic-bezier(0.175, 0.885, 0.320, 1.275)
 
-	/*----------  Buttons  ----------*/
-	&__button
-		display: inline-block
-		position: relative
-		background: linear-gradient(to top, #101010, #333)
-		border: none
-		color: #fff
-		font-size: 24px
-		width: 70px
-		text-align: center
-		padding: 10px 20px
-		cursor: pointer
-		line-height: 40px
-		transition: transform .3s cubic-bezier(0.175, 0.885, 0.320, 1.275), box-shadow .3s cubic-bezier(0.175, 0.885, 0.320, 1.275)
-		box-shadow: inset 0 0 6px rgba(0, 0, 0, .75), 0 5px 1px 0 #000
+	&:hover,
+	&:focus
+		opacity: .8
 
-		& + &:before
-			content: ''
-			left: 0
-			top: 0
-			height: 100%
-			width: 1px
-			background: linear-gradient(to bottom, #333, #222)
-			position: absolute
+	&:active
+		transform: translateY(5px)
+		transition-timing-function: ease
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0)
 
-		&.is-active,
-		&:active,
-		&:focus
-			outline: none
-			background: linear-gradient(to top, #101010, #000)
-			transform: translateY(5px)
-			box-shadow: inset 0 0 6px rgba(0, 0, 0, .75), 0 0 0 0 #000
-			color: $color-orange
-			transition-timing-function: ease
+	/*----------  Twitter  ----------*/
+	&--twitter
+		background-color: #1a97f1
+		box-shadow: 0 5px 0 0 darken(#1a97f1, 10%)
 
-			&:before
-				left: 0
-				top: auto
-				bottom: 0
-				width: 100%
-				height: 1px
-				box-shadow: 0 -4px 12px 0 #fff
+	/*----------  Facebook  ----------*/
+	&--facebook
+		background-color: #334f8d
+		box-shadow: 0 5px 0 0 darken(#334f8d, 10%)
 
-		&:first-of-type
-			border-radius: 5px 0 0 5px
+	/*----------  GitHub  ----------*/
+	&--github
+		background-color: #f5f7f9
+		box-shadow: 0 5px 0 0 darken(#f5f7f9, 10%)
+		color: #666
 
-		&:last-of-type
-			border-radius: 0 5px 5px 0
+	/*----------  CodePen  ----------*/
+	&--codepen
+		background-color: #363636
+		box-shadow: 0 5px 0 0 darken(#363636, 10%)
 
-/*----------  Modificator for light version  ----------*/
-.is-light
-	.actions
-		&__button
-			background: linear-gradient(to top, #ddd, #eee)
-			box-shadow: inset 0 0 6px rgba(255, 255, 255, .8), 0 5px 1px 0 #bbb
-			color: #aaa
-
-			& + .actions__button:before
-				opacity: .15
-
-			&.is-active,
-			&:active,
-			&:focus
-				background: linear-gradient(to top, #eee, #f5f5f5)
-				box-shadow: inset 0 0 6px rgba(255, 255, 255, .8), 0 0 0 0 #bbb
-				color: $color-blue
-
-				&:before
-					opacity: 1
-					background: #ccc
+	/*----------  LinkedIn  ----------*/
+	&--linkedin
+		background-color: #006cac
+		box-shadow: 0 5px 0 0 darken(#006cac, 10%)
