Adds the blog page

--- a/src/styles/components/_buttons.sass
+++ b/src/styles/components/_buttons.sass
@@ -4,6 +4,7 @@
 	padding: 5px 18px
 	text-decoration: none
 	transition: opacity .3s ease, transform .3s cubic-bezier(0.175, 0.885, 0.320, 1.275), box-shadow .3s cubic-bezier(0.175, 0.885, 0.320, 1.275)
+	margin-bottom: 10px
 
 	&:hover,
 	&:focus
