--- a/src/styles/layout/_themes.sass
+++ b/src/styles/layout/_themes.sass
@@ -16,3 +16,10 @@ body
 /*----------  Light theme  ----------*/
 .is-light
 	@include theme(#444, $color-blue)
+
+	.post__link
+		background-color: rgba(255, 255, 255, .75)
+
+		&:hover,
+		&:focus
+			background-color: rgba(255, 255, 255, .90)
