--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -6,6 +6,7 @@
 @import 'components/arrow-link'
 @import 'components/actions-buttons'
 @import 'components/buttons'
+@import 'components/post'
 
 @import 'shared/grid'
 @import 'shared/hold-themes'
