--- a/src/styles/shared/_grid.sass
+++ b/src/styles/shared/_grid.sass
@@ -12,6 +12,11 @@
 	&--full
 		max-width: 100%
 
+	&--flex
+		display: flex
+		justify-content: space-between
+		flex-wrap: wrap
+
 /*----------  Flex for center elements  ----------*/
 .is-center
 	display: flex
