--- a/src/styles/config/_variables.sass
+++ b/src/styles/config/_variables.sass
@@ -17,6 +17,7 @@ $color-links: $color-orange
 /*----------  Themes  ----------*/
 
 /*----------  Z-index  ----------*/
+$z-index--header: 5
 $z-index--arrow: 4
 $z-index--main: 3
 $z-index--cover: 2
