Changes for blog page and responsive design

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   {% endif %}
 
   {% include head.html %}
-<body class="has-cover is-center" data-hold>
+<body class="has-cover is-center home" data-hold>
 
 	<div data-wrap-theme class="theme">
 		<div data-theme class="theme__item theme__item--light"></div>
