--- a/src/styles/components/_actions-buttons.sass
+++ b/src/styles/components/_actions-buttons.sass
@@ -5,6 +5,11 @@
 	display: flex
 	justify-content: center
 
+	@include media($grid--break-actions)
+		position: static
+		margin-top: 15px
+		justify-content: flex-start
+
 	/*----------  Buttons  ----------*/
 	&__button
 		display: inline-block
