--- a/src/styles/config/_variables.sass
+++ b/src/styles/config/_variables.sass
@@ -22,3 +22,6 @@ $z-index--arrow: 4
 $z-index--main: 3
 $z-index--cover: 2
 $z-index--gradient: 1
+
+$grid--break-arrows: 768px
+$grid--break-actions: 600px
