--- a/src/styles/components/_typography.sass
+++ b/src/styles/components/_typography.sass
@@ -4,6 +4,9 @@ body
 	font-weight: $font-weight--light
 	font-size: 18px
 
+	@include media(768px)
+		font-size: 16px
+
 /*----------  Titles  ----------*/
 
 
