--- a/src/styles/shared/_grid.sass
+++ b/src/styles/shared/_grid.sass
@@ -9,6 +9,10 @@
 	padding-left: 60px
 	padding-right: 60px
 
+	@include media($grid--break-arrows)
+		padding-left: 20px
+		padding-right: 20px
+
 	&--full
 		max-width: 100%
 
