--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,12 @@
 <!-- <a href="#conteudo" class="sr-only go-content" tabindex="1" accesskey="1">Ir para conteúdo</a> -->
-<header class="header container container--full" role="banner">
+<header class="header {% if page.layout == 'blog' or page.type == 'Post' %}header--inline{% endif %} container container--full" role="banner">
 	<div class="header__info">
 		{% if page.type != 'Home' %}
-		<figure class="header__thumb">
+		<!-- <figure class="header__thumb">
 			<a href="/">
 				<img src="/dist/images/raphael-fabeni.jpg" alt="Picture of Raphael Fabeni">
 			</a>
-		</figure>
+		</figure> -->
 		{% endif %}
 		<div>
 			<h1 class="header__title"><a href="/">Raphael Fabeni</a></h1>
