--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -6,7 +6,7 @@
   {% endif %}
 
   {% include head.html %}
-<body data-hold>
+<body data-hold class="blog">
 
 	<div data-wrap-theme class="theme">
 		<div data-theme class="theme__item theme__item--light"></div>
