--- a/src/styles/shared/_header.sass
+++ b/src/styles/shared/_header.sass
@@ -12,21 +12,21 @@
 	&__info
 		display: flex
 		align-items: center
-		max-width: 400px
+		max-width: 550px
 
 	/*----------  Thumb  ----------*/
 	&__thumb
 		border-radius: 50%
 		overflow: hidden
 		display: inline-block
-		max-width: 125px
-		flex-basis: 125px
+		max-width: 100px
+		flex-basis: 100px
 		border: solid 5px rgba(255, 255, 255, .2)
 		margin-right: 10px
 
 		@include media($grid--break-actions)
-			max-width: 90px
-			flex-basis: 90px
+			max-width: 70px
+			flex-basis: 70px
 
 	/*----------  Title and subtitle  ----------*/
 	&__title,
@@ -46,3 +46,20 @@
 
 		@include media(500px)
 			font-size: 16px
+
+/*----------  Inline version  ----------*/
+.header--inline
+
+	.header__title,
+	.header__subtitle
+		display: inline-block
+
+		@include media(650px)
+			display: block
+
+	.header__subtitle
+		margin-top: 5px
+		margin-left: 10px
+
+		@include media(650px)
+			margin: 0
