Updates design for blog post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@ type: post
 		</div>
 	</header> -->
 	<div class="container">
-	  <article role="main" id="content" >
+	  <article role="main" class="post-content">
 	    {{ content }}
 	  </article>
   </div>
