--- a/src/styles/config/_general.sass
+++ b/src/styles/config/_general.sass
@@ -12,3 +12,13 @@ iframe
 	width: auto
 	max-width: 100%
 	height: auto
+
+.sr-only
+	position: absolute
+	width: 1px
+	height: 1px
+	padding: 0
+	margin: -1px
+	overflow: hidden
+	clip: rect(0 0 0 0)
+	border: 0
