--- a/src/styles/layout/_post.sass
+++ b/src/styles/layout/_post.sass
@@ -1,2 +1,34 @@
 .header-post
 	border: solid 1px #ff0
+
+.post-content
+	p
+		margin-bottom: 20px
+		line-height: 1.6
+
+	h2,
+	h3,
+	h4
+		margin-bottom: 10px
+
+	.highlight
+		margin-bottom: 20px
+		padding: 10px 20px
+		box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5) inset
+		font-size: 16px
+		line-height: 1.4
+
+		pre
+			color: #eee
+			text-indent: -6px
+			white-space: pre-wrap
+			word-wrap: break-word
+
+		code
+			background-color: transparent
+			color: inherit
+
+	code
+		background-color: rgba(0, 0, 0, 0.3)
+		color: #f92672
+		padding: 2px 5px
