--- a/src/styles/components/_buttons.sass
+++ b/src/styles/components/_buttons.sass
@@ -1,10 +1,11 @@
 .button
 	color: #fff
 	display: inline-block
-	padding: 5px 18px
+	padding: 3px 18px
 	text-decoration: none
 	transition: opacity .3s ease, transform .3s cubic-bezier(0.175, 0.885, 0.320, 1.275), box-shadow .3s cubic-bezier(0.175, 0.885, 0.320, 1.275)
 	margin-bottom: 10px
+	border-radius: 3px
 
 	&:hover,
 	&:focus
@@ -14,6 +15,15 @@
 		transform: translateY(5px)
 		transition-timing-function: ease
 		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0)
+
+	&--default
+		background-color: #222
+		box-shadow: 0 5px 0 0 darken(#222, 10%)
+
+	/*----------  Big size  ----------*/
+	&--big
+		padding: 10px 25px
+
 
 	/*----------  Twitter  ----------*/
 	&--twitter
