Updates post design

--- a/src/styles/layout/_syntax-light.sass
+++ b/src/styles/layout/_syntax-light.sass
@@ -1,91 +1,110 @@
 .highlight
-	background: #eee
-	box-shadow: 0 0 50px 0 rgba(255, 255, 255, 0.15) inset
-
+	background-color: #fcfcfc
+	box-shadow: none
+	pre
+		color: #bbb
+	.nx
+		color: #66cc99
+	.p
+		color: inherit
+	.hll
+		background-color: #ffffcc
 	.c
-		color: #999988
+		color: #0099ff
 		font-style: italic
 	.err
-		color: #a61717
-		background-color: #e3d2d2
-	.k,
-	.o
+		color: #aa0000
+		background-color: #ffaaaa
+	.k
+		color: #006699
 		font-weight: bold
+	.o
+		color: #555555
 	.cm
-		color: #999988
+		color: #0099ff
 		font-style: italic
 	.cp
-		color: #999999
-		font-weight: bold
+		color: #009999
 	.c1
-		color: #999988
+		color: #0099ff
 		font-style: italic
 	.cs
-		color: #999999
+		color: #0099ff
 		font-weight: bold
 		font-style: italic
 	.gd
-		color: #000000
-		background-color: #ffdddd
-		.x
-			color: #000000
-			background-color: #ffaaaa
+		background-color: #ffcccc
+		border: 1px solid #cc0000
 	.ge
 		font-style: italic
 	.gr
-		color: #aa0000
+		color: #ff0000
 	.gh
-		color: #999999
+		color: #003300
+		font-weight: bold
 	.gi
-		color: #000000
-		background-color: #ddffdd
-		.x
-			color: #000000
-			background-color: #aaffaa
+		background-color: #ccffcc
+		border: 1px solid #00cc00
 	.go
-		color: #888888
+		color: #aaaaaa
 	.gp
-		color: #555555
+		color: #000099
+		font-weight: bold
 	.gs
 		font-weight: bold
 	.gu
-		color: #aaaaaa
+		color: #003300
+		font-weight: bold
 	.gt
-		color: #aa0000
+		color: #99cc66
 	.kc,
 	.kd,
-	.kp,
+	.kn
+		color: #006699
+		font-weight: bold
+	.kp
+		color: #006699
 	.kr
+		color: #006699
 		font-weight: bold
 	.kt
-		color: #445588
+		color: #007788
 		font-weight: bold
 	.m
-		color: #009999
+		color: #ff6600
 	.s
-		color: #d14
+		color: #cc3300
 	.na
-		color: #008080
+		color: #330099
 	.nb
-		color: #0086b3
+		color: #336666
 	.nc
-		color: #445588
+		color: #00aa88
 		font-weight: bold
 	.no
-		color: #008080
+		color: #336600
+	.nd
+		color: #9999ff
 	.ni
-		color: #800080
-	.ne,
-	.nf
-		color: #990000
+		color: #999999
 		font-weight: bold
+	.ne
+		color: #cc0000
+		font-weight: bold
+	.nf
+		color: #cc00ff
+	.nl
+		color: #9999ff
 	.nn
-		color: #555555
+		color: #00ccff
+		font-weight: bold
 	.nt
-		color: #000080
+		color: #330099
+		font-weight: bold
 	.nv
-		color: #008080
+		color: #003333
 	.ow
+		color: #000000
 		font-weight: bold
 	.w
 		color: #bbbbbb
@@ -93,30 +112,35 @@
 	.mh,
 	.mi,
 	.mo
-		color: #009999
+		color: #ff6600
 	.sb,
-	.sc,
-	.sd,
-	.s2,
-	.se,
-	.sh,
-	.si,
+	.sc
+		color: #cc3300
+	.sd
+		color: #cc3300
+		font-style: italic
+	.s2
+		color: #cc3300
+	.se
+		color: #cc3300
+		font-weight: bold
+	.sh
+		color: #cc3300
+	.si
+		color: #aa0000
 	.sx
-		color: #d14
+		color: #cc3300
 	.sr
-		color: #009926
+		color: #33aaaa
 	.s1
-		color: #d14
+		color: #cc3300
 	.ss
-		color: #990073
+		color: #ffcc33
 	.bp
-		color: #999999
+		color: #336666
 	.vc,
 	.vg,
 	.vi
-		color: #008080
+		color: #003333
 	.il
-		color: #009999
-
-
-
+		color: #ff6600
