--- a/src/styles/layout/_themes.sass
+++ b/src/styles/layout/_themes.sass
@@ -17,7 +17,8 @@ body
 .is-light
 	@include theme(#444, $color-blue)
 
-	@import '../layout/syntax-light'
+	.post-content
+		@import '../layout/syntax-light'
 
 	.button--default
 		background-color: #eee
