--- a/src/styles/components/_typography.sass
+++ b/src/styles/components/_typography.sass
@@ -15,7 +15,7 @@ p
 	line-height: 1.4
 
 /*----------  Links  ----------*/
-a:not(.arrow):not(.button):not(.post__link)
+a:not(.arrow):not(.button):not(.post__link):not(.navigation__link)
 	color: $color-links
 	transition: opacity .3s ease, color .3s ease
 
