--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -11,6 +11,7 @@
 @import 'shared/grid'
 @import 'shared/hold-themes'
 @import 'shared/header'
+@import 'shared/navigation'
 
 @import 'layout/index'
 @import 'layout/post'
